--- a/frontend/src/app/sequence/sequence.html
+++ b/frontend/src/app/sequence/sequence.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="mb-4 text-center">Sequence Metadata Viewer</h1>
+  <h1 class="mb-4 text-center">Sequence Viewer</h1>
 
   <div class="mb-3">
     <label for="seq-id" class="form-label">Sequence ID</label>
@@ -7,39 +7,33 @@
       placeholder="Enter sequence ID..." />
   </div>
 
+  <!-- Show spinner while sequenceData is loading -->
+  <div *ngIf="!sequenceData && !errorMessage" class="d-flex justify-content-center align-items-center" style="height: 200px;">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+  </div>
+
   <div *ngIf="errorMessage" class="alert alert-danger">
     {{ errorMessage }}
   </div>
 
-  <div *ngIf="sequenceData" class="card shadow-sm">
+  <div *ngIf="sequenceData">
 
-    <div class="card-header bg-secondary text-white">
-      <h4 class="mb-0">Sequence number: {{ sequenceData?.title }}</h4>
-    </div>
+    <h2 class="mt-2 mb-2">Sequence number: {{ sequenceData?.title }}</h2>
 
-    <div class="card-body">
+    <img class="img-fluid rounded border mb-2"
+      [src]="sequencePlotPath + sequenceData?.id + '.png'"
+      alt="Sequence plot" />
 
-      <div class="row mb-3">
-        <div class="col-md-6">
-          <p><strong>ID:</strong> {{ sequenceData?.id }}</p>
-          <p><strong>Sequence:</strong> {{ sequenceData?.sequence }}</p>
-          <p><strong>TODO:</strong> {{ sequenceData?.id }}</p>
-          <p><strong>TODO:</strong> {{ sequenceData?.id }}</p>
-        </div>
-        <div class="col-md-6">
-          <p><strong>TODO:</strong> {{ sequenceData?.id }}</p>
-          <p><strong>TODO:</strong> {{ sequenceData?.id }}</p>
-        </div>
-      </div>
-
-      <p class="mb-3"><strong>Sequence:</strong> {{ sequenceData?.sequence }}</p>
-
-      <img class="img-fluid rounded border" [src]="'http://localhost:8000/api/media/output_plots/sequence_' + sequenceData?.id + '.png'"
-        alt="Sequence plot" />
-    </div>
-
-    <!-- <p><strong>Sequence:</strong> {{ sequenceData?.sequence }}</p>
-    <img [src]="'http://localhost:8000/api/media/' + sequenceData.file_path" alt="Sequence plot" /> -->
+    <table class="table table-bordered table-striped">
+      <tbody>
+        <tr *ngFor="let col of columnKeys">
+          <th>{{ col }}</th>
+          <td>{{ sequenceData[col] }}</td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
 </div>
